fixed bug regarding intro styling overlapping with navbar

--- a/src/Components/NavbarComponents/menu.scss
+++ b/src/Components/NavbarComponents/menu.scss
@@ -27,12 +27,12 @@
         a::after {
             content: '';
             position: absolute;
-            width: 80%;
+            width: 100%;
             height: 4px;
             border-radius: 5px;
             background: v.$gradient-colour;
-            bottom: 0px;
-            left: 10px;
+            bottom: -5px;
+            left: 0px;
             transform-origin: center;
             transform: scaleX(0);
             transition: v.$transition1;
